syntax = "proto3";
package conversation;
option go_package="/conversation";

enum ConversationErrorCode{
  OK = 0; // 成功
  UNKNOWN_ERROR = 1; // 未知错误
  INVALID_MESSAGE = 2; // 无效的消息
  SERIALIZATION_ERROR = 3; // 序列化错误
  DESERIALIZATION_ERROR = 4; // 反序列化错误
  SOCKET_ERROR = 5; // Socket 错误
  MESSAGE_TOO_LARGE = 6; // 消息太大
}

message Conversation{
  string conversation_id = 1; // 对话 ID
  string GroupLeader = 2; // 用户名
  repeated string members = 3; // 成员列表
  repeated string admins = 4; // 管理员列表
  string conversation_name = 5; // 对话名称
  string conversation_type = 6; // 对话类型
  string Avatar = 7; // 对话头像
}
message CreateSingleConversationRequest{
  string user_name = 1;
  string member = 2;
}

message CreateSingleConversationResponse{
  ConversationErrorCode error_code = 1;
  string error_message = 2;
  Conversation conversationInfo = 3;
}

message CreateGroupConversationRequest{
  string GroupLeader = 1;
  repeated string members = 2;
  repeated string admins = 3;
  string ConversationName = 4;
}

message CreateGroupConversationResponse{
  ConversationErrorCode error_code = 1;
  string error_message = 2;
  Conversation conversationInfo = 3;
}

message GetRecentConversationsRequest{
  string user_name = 1;
  int64 limit = 2; // 限制返回的对话数量
}

message GetRecentConversationsResponse{
  ConversationErrorCode error_code = 1;
  string error_message = 2;
  repeated Conversation conversations = 3;
}

service ConversationService{
  rpc CreateSingleConversation(CreateSingleConversationRequest) returns (CreateSingleConversationResponse);
  rpc CreateGroupConversation(CreateGroupConversationRequest) returns (CreateGroupConversationResponse);
  rpc GetRecentConversations(GetRecentConversationsRequest) returns (GetRecentConversationsResponse);
}